Update-Week2-connect-to-CEModel

--- a/modules/Makefile.am
+++ b/modules/Makefile.am
@@ -466,7 +466,8 @@ module-flightgear/sendToFlightgear.cc \
 module-flightgear/recFromFlightgear.cc
 
 EXTRA_DIST += \
+module-chrono-interface/Makefile.inc \
 module-chrono-interface/module-chrono-interface.cc \
-module-chrono-interface/module-chrono-interface.h
+module-chrono-interface/module-chrono-interface.h 
 
 include $(top_srcdir)/build/bot.mk
