add added mass element to Makefile.am

--- a/mbdyn/struct/Makefile.am
+++ b/mbdyn/struct/Makefile.am
@@ -7,6 +7,8 @@ noinst_LTLIBRARIES = libstruct.la
 libstruct_la_SOURCES = \
 accj.cc \
 accj.h \
+addedmass.cc \
+addedmass.h \
 autostr.cc \
 autostr.h \
 beam.cc \
