Add support for sparse gradients

--- a/libraries/libmbmath/Makefile.am
+++ b/libraries/libmbmath/Makefile.am
@@ -58,9 +58,29 @@ submat.cc \
 submat.h \
 tpls.h \
 vh.cc \
-vh.h \
+vh.h
+
+if USE_AUTODIFF
+libmbmath_la_SOURCES += \
 gradient.h \
 matvec.h
+endif
+
+if USE_SPARSE_AUTODIFF
+libmbmath_la_SOURCES += \
+sp_exp_dof_map.h \
+sp_gradient_base.h \
+sp_gradient_expr.h \
+sp_gradient_func.h \
+sp_gradient_fwd.h \
+sp_gradient.h \
+sp_gradient_op.h \
+sp_gradient_util.h \
+sp_matrix_base_fwd.h \
+sp_matrix_base.h \
+sp_gradient.cc \
+sp_matrix_base.cc
+endif
 
 if USE_SCHUR
 libmbmath_la_SOURCES += \
@@ -89,6 +109,11 @@ if USE_AUTODIFF
 noinst_PROGRAMS += \
 gradienttest \
 matvectest
+endif
+
+if USE_SPARSE_AUTODIFF
+noinst_PROGRAMS += \
+sp_gradient_test
 endif
 
 matmultest_SOURCES = matmultest.cc
@@ -225,6 +250,15 @@ libmbmath.la \
 @FCLIBS@ \
 @LIBS@ \
 @RT_LIBS@
+
+sp_gradient_test_SOURCES = \
+sp_gradient_test.cc \
+sp_gradient_test_func.h \
+sp_gradient_test_func.cc
+
+sp_gradient_test_LDADD = \
+libmbmath.la \
+../libmbutil/libmbutil.la
 
 AM_CPPFLAGS = \
 -I../../include \
