Squashed commit of the following:
commit f3050ebbf4c8da0c9333da94ab6ae732c7919077
Author: Reinhard Resch <mbdyn-user@a1.net>
Date:   Sun Nov 22 19:20:11 2020 +0100

    Fix missing #ifdef

commit a78f8f7e1df6f3f6fb3a9ed1ea41ca5740c0e8e3
Author: Reinhard Resch <mbdyn-user@a1.net>
Date:   Sun Nov 22 19:14:04 2020 +0100

    Fix missing initialization of USE_PASTIX

commit 0d906d1df5ba93d85871fbf5c0221b1ff4e1e67b
Author: Reinhard Resch <mbdyn-user@a1.net>
Date:   Sun Nov 22 18:17:58 2020 +0100

    Add new matrix handler for faster scaling

commit 65a2029d12d3580dd71ff03568a5a670bf97207c
Author: Reinhard Resch <mbdyn-user@a1.net>
Date:   Sun Nov 22 14:20:38 2020 +0100

    Avoid analysis of matrix pattern if not required

commit 5cfa0f4f1ccb0ae75894c9a3026c41684b0f5d8e
Author: Reinhard Resch <mbdyn-user@a1.net>
Date:   Sun Nov 22 11:17:32 2020 +0100

    Use spmSymmetrize to get a symmetric graph

commit 3a07bbe7515a250c0092d3f56bbfe804225b70c2
Author: Reinhard Resch <mbdyn-user@a1.net>
Date:   Sat Nov 21 19:57:45 2020 +0100

    Fix missing update of structural node data

commit cd0a0dea8ff523cb27385fc73183c02778fd64f8
Author: Reinhard Resch <mbdyn-user@a1.net>
Date:   Sat Nov 21 16:00:31 2020 +0100

    Squashed commit of the following:

    commit cf94c45c66eb7a4d1a7c66b34dc802bb4b9248f4
    Merge: d18668329 6c51aaaf4
    Author: Andrea Zanoni <andrea.zanoni@polimi.it>
    Date:   Wed Nov 18 22:33:30 2020 +0100

        Merge branch 'develop' of public.gitlab.polimi.it:DAER/mbdyn into develop

    commit d18668329e99dd2a414b3ed8d0ee4a53e8597a83
    Author: Andrea Zanoni <andrea.zanoni@polimi.it>
    Date:   Wed Nov 18 22:32:23 2020 +0100

        added joint regularization to Control Data counters

    commit 3c922eddd65edb4b86fa382636ea0fea9d8949ad
    Author: Andrea Zanoni <andrea.zanoni@polimi.it>
    Date:   Wed Nov 18 22:31:16 2020 +0100

        Fixed asserts and a couple of typos

    commit 6c51aaaf45d885d98227f30ab8c6f18a05d29859
    Author: Pierangelo Masa

--- a/configure.ac
+++ b/configure.ac
@@ -399,6 +399,7 @@ HARWELL_LIBS=
 LAPACK_LIBS=
 TAUCS_LIBS=
 PASTIX_LIBS=
+PASTIX_INC=
 QRUPDATE_LIBS=
 SUITESPARSEQR_LIBS=
 ARPACK_LIBS=
@@ -2802,55 +2803,56 @@ dnl Check for Pastix
 dnl
 ol_link_pastix=no
 if test $ol_with_pastix != no ; then
-	AC_CHECK_HEADERS(pastix.h)
+        have_pastix="no"
 
-	if test "$ac_cv_header_pastix_h" = "yes" ; then
-		AC_MSG_CHECKING([for Pastix library])
-		try_pastix_LIBS="-lpastix"
-		save_LIBS="$LIBS"
-		have_pastix="no"
-	        LIBS="$try_pastix_LIBS $save_LIBS -lm"
-			AC_TRY_LINK([
-#include <stdint.h>
-#include <pastix.h>
-],[
-                pastix_data_t* pastix_data;
-                pastix_int_t* colptr;
-                pastix_int_t* rows;
-                pastix_float_t* avals;
-                pastix_int_t* perm;
-                pastix_int_t* iperm;
-                pastix_int_t ncols;
-                pastix_float_t* x;
-                pastix_int_t iparm[IPARM_SIZE];
-                double dparm[DPARM_SIZE];
-                iparm[IPARM_START_TASK] = API_TASK_INIT;
-                iparm[IPARM_END_TASK] = API_TASK_REFINE;
-                pastix(&pastix_data,
-                       0,
-                       ncols,
-                       colptr,
-                       rows,
-                       avals,
-                       perm,
-                       iperm,
-                       x,
-                       1,
-                       iparm,
-                       dparm);
-			],[have_pastix="yes"])
+	if test -z "${PASTIX_INC}"; then
+     	        if ! test -z "${PKG_CONFIG}"; then
+     	                PASTIX_INC="`${PKG_CONFIG} --cflags pastix`"
+     	        fi
+	fi
 
-                LIBS="$save_LIBS"
-
-                if test "$have_pastix" = "yes"; then
-                   AC_MSG_RESULT([yes])
-                   ol_link_pastix=yes
-                   PASTIX_LIBS="$try_pastix_LIBS"
-                   AC_DEFINE(USE_PASTIX,1,[define if you want to use Pastix])
+   	if test -z "${PASTIX_LIBS}"; then
+     	        if ! test -z "${PKG_CONFIG}"; then
+                        PASTIX_LIBS="`${PKG_CONFIG} --libs pastix`"
                 else
-                   AC_MSG_RESULT([no])
-		fi
+                        PASTIX_LIBS="-lpastix -lpastix_kernels -lspm -lhwloc"
+                fi
         fi
+
+        save_CPPFLAGS="${CPPFLAGS}"
+	CPPFLAGS="${PASTIX_INC} ${CPPFLAGS}"
+
+	AC_CHECK_HEADER([pastix.h])
+
+	if test "${ac_cv_header_pastix_h}" = yes; then
+	        save_LIBS="$LIBS"
+	        LIBS="${PASTIX_LIBS} $save_LIBS -lm"
+
+	        AC_CHECK_FUNCS([pastixInit \
+	                        pastixInitParam \
+			        pastix_task_analyze \
+			        pastix_task_numfact \
+			        pastix_task_solve \
+				pastix_task_refine \
+				pastixFinalize \
+				spmNorm \
+				spmScalMatrix \
+				spmScalVector \
+				spmExit \
+				spmCheckAxb],[have_pastix=yes],[have_pastix=no])
+
+		LIBS="$save_LIBS"
+	fi
+
+	CPPFLAGS="${save_CPPFLAGS}"
+	
+	if test "${have_pastix}" = "yes"; then
+		ol_link_pastix=yes
+	        AC_DEFINE([USE_PASTIX],1,[Define if PaStiX can be used])
+	else
+		PASTIX_LIBS=""
+		PASTIX_INC=""
+	fi
 fi
 
 dnl ----------------------------------------------------------------
@@ -3595,6 +3597,7 @@ AC_SUBST(Y12_LIBS)
 AC_SUBST(SUPERLU_LIBS)
 AC_SUBST(WSMP_LIBS)
 AC_SUBST(HARWELL_LIBS)
+AC_SUBST(PASTIX_INC)
 AC_SUBST(PASTIX_LIBS)
 AC_SUBST(QRUPDATE_LIBS)
 AC_SUBST(SUITESPARSEQR_LIBS)
@@ -3645,6 +3648,7 @@ AM_CONDITIONAL(USE_SOCKET,[test "$use_socket" = yes])
 AM_CONDITIONAL(USE_ANN,[test "$ol_link_ann" = yes])
 AM_CONDITIONAL(USE_AUTODIFF,[test "$ol_enable_autodiff" = yes])
 AM_CONDITIONAL(USE_SPARSE_AUTODIFF,[test "$ol_enable_sparse_autodiff" = yes])
+AM_CONDITIONAL([USE_PASTIX],[test "$ol_link_pastix" = "yes"])
 
 AM_CONDITIONAL(FOOL_LIBTOOL,[test "$fool_libtool" = yes])
 
