--- a/modules/module-chrono-interface/Makefile.inc
+++ b/modules/module-chrono-interface/Makefile.inc
@@ -24,9 +24,9 @@
 # 5. copy your shared libraries to /lib or /usr/lib (default path)
 
 LIBPATH=/home/runsen/Documents/GSoC/C::E_models  #/home/runsen/Documents/GSoC/C::E_models/paper_example#
-
+#LIBPATH=/home/runsen/Downloads/GSoC2020/demo/technical_example/beam_displacement/particle_dameprs
 
 # the header for the funcs “mbdyn_ce.h”.
 MODULE_INCLUDE = -I .
 # link the shared library, such as “libCE_models.so”
-MODULE_LINK= -L$(LIBPATH)  -lCE_models  #-lMassSpring
+MODULE_LINK= -L$(LIBPATH)  -lCE_models  #  -lpd_model #   #-lMassSpring
