Enable build with pardiso solver

--- a/libraries/libmbwrap/Makefile.am
+++ b/libraries/libmbwrap/Makefile.am
@@ -69,6 +69,7 @@ libmbwrap_la_LIBADD = \
 @HARWELL_LIBS@ \
 @SUPERLU_LIBS@ \
 @TAUCS_LIBS@ \
+@PARDISO_LIBS@ \
 @WSMP_LIBS@ \
 @PASTIX_LIBS@ \
 @QRUPDATE_LIBS@ \
