add singlestep methods; not completed

--- a/mbdyn/base/Makefile.am
+++ b/mbdyn/base/Makefile.am
@@ -151,6 +151,9 @@ shdrive.h \
 shockabsorber.h \
 simentity.cc \
 simentity.h \
+singlestepsol_impl.cc \
+singlestepsol_impl.h \
+singlestepsol_tpl.h \
 sockdrv.cc \
 sockdrv.h \
 socketstreamdrive.cc \
